- tests for methods to compress and decompress

--- a/tests/TestTask_GZipArchiver.Tests/TestTask_GZipArchiver.Tests.csproj
+++ b/tests/TestTask_GZipArchiver.Tests/TestTask_GZipArchiver.Tests.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\..\src\TestTask_GZipArchiver\TestTask_GZipArchiver.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="files\" />
+  </ItemGroup>
+
 </Project>
