- Additional console output was added, - QueueSynchronizer was modified: type of locker was changed from AutoResetEvent to ManualResetEvent

--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,4 @@ paket-files/
 __pycache__/
 *.pyc
 /src/TestTask_GZipArchiver/Properties/launchSettings.json
+/src/TestTask_GZipArchiver/Properties/PublishProfiles/FolderProfile.pubxml
